tests/ui/layout/gce-rigid-const-in-array-len.stderr
error: the type `[u8; <u8 as A>::B]` has an unknown layout
  --> $DIR/gce-rigid-const-in-array-len.rs:25:1
   |
LL | struct S([u8; <u8 as A>::B])
   | ^^^^^^^^

error: aborting due to 1 previous error

